--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
   <div id="ovSection" class="ov-section">
     <div class="leader-head" style="margin-bottom:6px">
       <div class="leader-name overview">總覽 / Overview</div>
-      <div class="leader-meta" id="ovHint">依 Leader 分組 · Grouped by Leader</div>
+      <div class="leader-meta" id="ovHint">By Leader</div>
       <button id="btnOvHide" class="leader-toggle" title="隱藏總覽">隱藏 / Hide</button>
     </div>
     <div id="leaderGrid" class="leader-grid"></div>
